--- a/backend/package.json
+++ b/backend/package.json
@@ -11,5 +11,9 @@
   "dependencies": {
     "express": "^4.21.2",
     "mongoose": "^8.9.5"
+  },
+  "devDependencies":
+  {
+    "nodemon":"^2.0.12"
   }
 }
