--- a/backend/server/package.json
+++ b/backend/server/package.json
@@ -1,19 +1,16 @@
 {
-  "name": "notebook-backend",
+  "name": "server",
   "version": "1.0.0",
-  "description": "notebook on the cloud",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
+  "description": "",
   "dependencies": {
     "express": "^4.21.2",
     "mongoose": "^8.9.5"
-  },
-  "devDependencies":
-  {
-    "nodemon":"^2.0.12"
   }
 }
