npm install express-validator
this pakage is inistalled

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "express-validator": "^7.2.1",
     "react": "latest",
     "react-dom": "latest"
   },
