--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "concurrently": "^9.1.2",
     "express-validator": "^7.2.1",
     "react": "latest",
-    "react-dom": "latest"
+    "react-dom": "latest",
+    "react-router-dom": "^7.1.3"
   },
   "devDependencies": {
     "@eslint/js": "latest",
