--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint src/ --fix",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "both ": "concurrently \"npm run start\" \"npm run dev\""
   },
   "dependencies": {
     "concurrently": "^9.1.2",
