--- a/package.json
+++ b/package.json
@@ -1,36 +1,41 @@
 {
-  "name": "notebook",
+  "name": "inotebook",
+  "version": "0.1.0",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "start": "nodemon backend/index.js",
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint src/ --fix",
-    "preview": "vite preview",
-    "both": "concurrently  \"npm run client\" \"npm run server\"",
-    "server": "nodemon backend/index.js",
-    "client": "vite"
-  },
   "dependencies": {
-    "concurrently": "^9.1.2",
-    "express-validator": "^7.2.1",
-    "react": "latest",
-    "react-dom": "latest",
-    "react-router-dom": "^7.1.3"
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "concurrently": "^6.2.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
+    "react-scripts": "^4.0.3",
+    "web-vitals": "^1.1.2"
   },
-  "devDependencies": {
-    "@eslint/js": "latest",
-    "@types/react": "latest",
-    "@types/react-dom": "latest",
-    "@vitejs/plugin-react": "latest",
-    "eslint": "latest",
-    "eslint-plugin-react": "latest",
-    "eslint-plugin-react-hooks": "latest",
-    "eslint-plugin-react-refresh": "latest",
-    "globals": "latest",
-    "nodemon": "latest",
-    "vite": "latest"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "both": "concurrently \"npm run start\" \"nodemon backend/index.js\""
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
